--- a/runtimes/rocm-tensorflow/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/rocm-tensorflow/ubi9-python-3.12/pyproject.toml
@@ -8,14 +8,16 @@ dependencies = [
 
     # ROCm TensorFlow packages
     # https://rocm.docs.amd.com/projects/install-on-linux/en/latest/install/3rd-party/tensorflow-install.html#using-a-wheels-package
-    "tensorflow-rocm @ https://repo.radeon.com/rocm/manylinux/rocm-rel-6.4/tensorflow_rocm-2.18.1-cp312-cp312-manylinux_2_28_x86_64.whl#sha256=814a5e4842b0c92d63c7a0bb4df0baf51ff2db8615535d83fe8958204b840598",
-    "tensorboard~=2.18.0", # tensorflow-rocm==2.18.1 is available and tensorflow-rocm==2.18.1 depends on tensorboard>=2.18,<2.19
+    # TODO(jdanek): consider adding #sha256=814a5e4842b0c92d63c7a0bb4df0baf51ff2db8615535d83fe8958204b840598
+    "tensorflow-rocm @ https://repo.radeon.com/rocm/manylinux/rocm-rel-6.3/tensorflow_rocm-2.17.0-cp312-cp312-manylinux_2_28_x86_64.whl",
+    # tensorflow-rocm==2.x needs tensorboard>=2.x,<2.x+1
+    "tensorboard~=2.17.0",
 
     # Datascience and useful extensions
     "boto3~=1.40.52",
     "kafka-python-ng~=2.2.3",
     "matplotlib~=3.10.7",
-    "numpy~=2.0.2",
+    "numpy~=1.26.4",
     "pandas~=2.3.3",
     "plotly~=6.3.1",
     "scikit-learn~=1.7.2",
