--- a/codeserver/ubi9-python-3.12/Dockerfile.cpu
+++ b/codeserver/ubi9-python-3.12/Dockerfile.cpu
@@ -57,7 +57,7 @@ COPY ${CODESERVER_SOURCE_CODE}/devel_env_setup.sh ./
 #            the final stage with the necessary permissions to consume from cache
 RUN --mount=type=cache,target=/root/.cache/uv \
     pip install --no-cache-dir uv && \
-    # the devel script is ppc64le specific - sets up build-time dependencies
+    # the devel script is ppc64le and s390x specific - sets up build-time dependencies
     source ./devel_env_setup.sh && \
     # This may have to download and compile some dependencies, and as we don't lock requirements from `build-system.requires`,
     #  we often don't know the correct hashes and `--require-hashes` would therefore fail on non amd64, where building is common.
@@ -90,12 +90,12 @@ RUN dnf -y upgrade --refresh --nobest --skip-broken --nodocs --noplugins --setop
 # upgrade first to avoid fixable vulnerabilities end
 
 # Install useful OS packages
-RUN dnf install -y perl mesa-libGL skopeo && dnf clean all && rm -rf /var/cache/yum
+RUN dnf install -y tar perl mesa-libGL skopeo && dnf clean all && rm -rf /var/cache/dnf
 
 # (ARCH-ppc64le): since wheels are compiled from source, we need shared libs available at runtime
 RUN --mount=type=cache,from=whl-cache,source=/root/OpenBLAS,target=/OpenBlas,rw \
     bash -c ' \
-        if [[ $(uname -m) == "ppc64le" ]]; then \
+        if [[ $(uname -m) == "ppc64le" ]] || [[ $(uname -m) == "s390x" ]]; then \
             dnf install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm; \
             dnf install -y lcms2 libraqm libimagequant openjpeg2; \
             PREFIX=/usr/ make install -C /OpenBlas; \
@@ -141,9 +141,9 @@ USER 0
 WORKDIR /opt/app-root/bin
 
 # Install useful OS packages
-RUN dnf install -y jq git-lfs libsndfile && dnf clean all && rm -rf /var/cache/yum
+RUN dnf install -y jq git-lfs libsndfile && dnf clean all && rm -rf /var/cache/dnf
 
-# wait for rpm-base stage (rpm builds for ppc64le)
+# wait for rpm-base stage (rpm builds for ppc64le and s390x)
 COPY --from=rpm-base /tmp/control /dev/null
 
 # Install code-server
@@ -255,7 +255,7 @@ COPY --from=whl-cache /tmp/control /dev/null
 RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=cache,from=whl-cache,source=/wheelsdir/,target=/wheelsdir/,rw \
     bash -c ' \
-        if [[ $(uname -m) == "ppc64le" ]]; then \
+        if [[ $(uname -m) == "ppc64le" ]] || [[ $(uname -m) == "s390x" ]]; then \
             uv pip install /wheelsdir/*.whl; \
         fi '
 # install packages as USER 0 (this will allow us to consume uv cache)
