--- a/codeserver/ubi9-python-3.12/pyproject.toml
+++ b/codeserver/ubi9-python-3.12/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "plotly~=6.3.0",
     "scikit-learn~=1.7.2",
     "scipy~=1.16.1",
-    "skl2onnx~=1.19.1",
+    "skl2onnx~=1.19.1; platform_machine != 's390x'",
     "ipykernel~=6.30.1",
     "kubeflow-training==1.9.3",
     "feast~=0.53.0",
@@ -26,7 +26,7 @@ dependencies = [
     "opencensus~=0.11.4",
     "smart-open~=7.3.1",
     "virtualenv~=20.34.0",
-    "py-spy~=0.4.1",
+    "py-spy~=0.4.1; platform_machine != 's390x'",
     "prometheus-client~=0.22.1",
 ]
 
