--- a/manifests/base/cuda-rstudio-buildconfig.yaml
+++ b/manifests/base/cuda-rstudio-buildconfig.yaml
@@ -47,6 +47,9 @@ spec:
     type: Docker
     dockerStrategy:
       dockerfilePath: "rstudio/rhel9-python-3.12/Dockerfile.cuda"
+      buildArgs:
+        - name: BASE_IMAGE
+          value: quay.io/opendatahub/odh-base-image-cuda-py312-ubi9:v12.8
       noCache: true
       volumes:
         - name: secret-mvn
