--- a/rstudio/rhel9-python-3.12/build-args/cpu.conf
+++ b/rstudio/rhel9-python-3.12/build-args/cpu.conf
@@ -1,4 +1,3 @@
-# Base Image   : RHEL 9.6 with Python 3.12
+# Base Image   : UBI 9 with Python 3.12
 # Architectures: linux/arm64, linux/x86_64
-# Source       : https://quay.io/repository/aipcc/base-images/cpu
-BASE_IMAGE=quay.io/aipcc/base-images/cpu:3.0-1758182126
+BASE_IMAGE=registry.redhat.io/rhel9/python-312:latest
