RHAIENG-287, Issue #2110: chore(ci): suppress DL3048 in Hadolint configuration for invalid label
```
./codeserver/ubi9-python-3.12/Dockerfile.konflux.cpu:127 DL3048 style: Invalid label key.
```

--- a/ci/hadolint-config.yaml
+++ b/ci/hadolint-config.yaml
@@ -38,3 +38,5 @@ ignored:
   - SC1091
   # DL3003 warning: Use WORKDIR to switch to a directory
   - DL3003
+  # DL3048 style: Invalid label key (seems like a hadolint bug not accepting `com.redhat.license_terms="https://..."`)
+  - DL3048
