RHAIENG-1602: fix(Dockerfile.rocm): create *.so symbolic links for ROCm 6.3.4 TensorFlow compatibility

--- a/jupyter/rocm/tensorflow/ubi9-python-3.12/Dockerfile.rocm
+++ b/jupyter/rocm/tensorflow/ubi9-python-3.12/Dockerfile.rocm
@@ -158,4 +158,9 @@ RUN echo "Installing softwares and packages" && \
 
 COPY ${JUPYTER_REUSABLE_UTILS}/usercustomize.pth ${JUPYTER_REUSABLE_UTILS}/monkey_patch_protobuf_6x.py /opt/app-root/lib/python3.12/site-packages/
 
+USER 0
+COPY ${TENSORFLOW_SOURCE_CODE}/utils/link-solibs.sh /tmp/link-solibs.sh
+RUN /tmp/link-solibs.sh && rm /tmp/link-solibs.sh
+USER 1001
+
 WORKDIR /opt/app-root/src
