--- a/jupyter/pytorch+llmcompressor/ubi9-python-3.12/kustomize/base/kustomization.yaml
+++ b/jupyter/pytorch+llmcompressor/ubi9-python-3.12/kustomize/base/kustomization.yaml
@@ -1,7 +1,9 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: jupyter-pytorch-llmcompressor-ubi9-python-3-12-
+# have to abbreviate the prefix, otherwise we'd go over the 63 character limit
+# > Pod "jupyter-pytorch-llmcompressor-ubi9-python-3-12-notebook-0" is invalid: metadata.labels: Invalid value: "jupyter-pytorch-llmcompressor-ubi9-python-3-12-notebook-7d69c59fc6": must be no more than 63 characters
+namePrefix: jupyter-pt-llmcompress-ubi9-python-3-12-
 labels:
   - includeSelectors: true
     pairs:
